# csbsr

./: .gitignore  docker-compose.yaml  pyproject.toml  test_roi.py
model/engine/: inference.py
model/utils/: estimate_metrics.py
model/utils/metrics/surface_distance/metrics/: surface_distance.py
