[project]
name = "csbsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "protobuf==3.20.1",
    "scikit-image>=0.26.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
    "yacs>=0.1.8",
]
